--- a/paginas__sudeste/sudeste.html
+++ b/paginas__sudeste/sudeste.html
@@ -8,7 +8,7 @@
     <meta name="keywords"
         content="filmes brasileiros, filmes do brasil, cinema brasileiro, cinema do brasil, cinema, fimes, brasil, sudeste, clássicos do cinema brasil, curadoria filmes, curadoria, clássicos cinema brasil, clássicos cinema brasileiro, aqui_no, aqui no, aquino, akino, aki no, aki_no, filmes sudeste, filmes do sudeste, filmes sudeste brasil, filmes sudeste do brasil, produção sudeste, produção cinematográfica sudeste, produção cinema brasil, produção cinema sudeste, direção cinema, direção cinematográfica, direcao cinematografica, diretor cinema carioca, diretor cinema rio de janeiro, direção cinema carioca, direção cinema rio de janeiro, leon hirzsman, leon hirzman, leon hirsman, cinema novo, cinema novo carioca, seleção de filmes do cinema novo carioca, clássicos do cinema brasil, clássicos, clássicos cinema, clássicos cinema brasil, clássicos cinema brasileiro, filmes clássicos do brasil, filmes clássicos brasil, filmes clássicos brasileiros, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste brasileiro, que horas ela volta, que horas ela volta?, marte um, marte 1, (c)elas, celas, rio de janeiro, rj, são paulo, sp, espírito santo, es, minas gerais, mg, divinas divas,os normais, os normais o filme, minha mae e uma peca 1, minha mãe é uma peça 1, minha mae e uma peca, minha mãe é uma peça, paulo gustavo, regina casé, leandra leal, rio 40 graus, nelson pereira dos santos, cidade de deus, Ök’ahpó - Desenforme, okahpo, ok ahpo, desenforme, Ka’a’i - O Ritual da Erva Mate, kaai ritual da erva mate">
     <meta name="description" content="Curadoria de filmes brasileiros que foram produzidos, concebidos e realizados na região sudeste do país feita pela Aqui_no. Um projeto realizado por um grupo de estudantes da Coderhouse para conhecer, assistir, deleitar de filmes feitos aqui no norte, nordeste, centro-oeste, sudeste e sul!">
-    <link rel="shortcut icon" href="/imagens/imagens sudeste/favicon_sudeste.png">
+    <link rel="shortcut icon" href="../imagens/imagens sudeste/favicon_sudeste.png">
     <title>_sudeste</title>
 </head>
 
@@ -40,7 +40,7 @@
                 <tr>
                     <td>2022</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/marteUm.html"><h3>"Marte Um"</h3></a>
+                        <a href="filmes_sudeste/marteUm.html"><h3>"Marte Um"</h3></a>
                     </td>
                     <td>Drama</td>
                     <td>115 minutos</td>
@@ -49,7 +49,7 @@
                 <tr>
                     <td>2015</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/queHorasElaVolta.html"><h3>"Que Horas Ela Volta?"</h3></a>
+                        <a href="filmes_sudeste/queHorasElaVolta.html"><h3>"Que Horas Ela Volta?"</h3></a>
                     </td>
                     <td>Drama</td>
                     <td>112 minutos</td>
@@ -58,7 +58,7 @@
                 <tr>
                     <td>2017</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/divinasDivas.html"><h3>"Divinas Divas"</h3></a>
+                        <a href="filmes_sudeste/divinasDivas.html"><h3>"Divinas Divas"</h3></a>
                     </td>
                     <td>Documentário</td>
                     <td>110 minutos</td>
@@ -67,7 +67,7 @@
                 <tr>
                     <td>2012</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/desenforme.html"><h3>"Ök’ahpó - Desenforme"</h3></a>
+                        <a href="filmes_sudeste/desenforme.html"><h3>"Ök’ahpó - Desenforme"</h3></a>
                     </td>
                     <td>Documentário</td>
                     <td>8 minutos</td>
@@ -76,7 +76,7 @@
                 <tr>
                     <td>2017</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/c-elas.html"><h3>"(C)elas"</h3></a>
+                        <a href="filmes_sudeste/c-elas.html"><h3>"(C)elas"</h3></a>
                     </td>
                     <td>Documentário</td>
                     <td>17 minutos</td>
@@ -85,7 +85,7 @@
                 <tr>
                     <td>1955</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/rio40graus.html"><h3>"Rio 40 Graus"</h3></a>
+                        <a href="filmes_sudeste/rio40graus.html"><h3>"Rio 40 Graus"</h3></a>
                     </td>
                     <td>Drama, Documentário</td>
                     <td>100 minutos</td>
@@ -94,7 +94,7 @@
                 <tr>
                     <td>2013</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/minhaMaeEUmaPeca.html"><h3>"Minha Mãe É Uma Peça"</h3></a>
+                        <a href="filmes_sudeste/minhaMaeEUmaPeca.html"><h3>"Minha Mãe É Uma Peça"</h3></a>
                     </td>
                     <td>Comédia</td>
                     <td>85 minutos</td>
@@ -103,7 +103,7 @@
                 <tr>
                     <td>2002</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/cidadeDeDeus.html"><h3>"Cidade de Deus"</h3></a>
+                        <a href="filmes_sudeste/cidadeDeDeus.html"><h3>"Cidade de Deus"</h3></a>
                     </td>
                     <td>Drama, Policial</td>
                     <td>105 minutos</td>
@@ -112,7 +112,7 @@
                 <tr>
                     <td>2003</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/osNormais.html"><h3>"Os Normais - O Filme"</h3></a>
+                        <a href="filmes_sudeste/osNormais.html"><h3>"Os Normais - O Filme"</h3></a>
                     </td>
                     <td>Comédia</td>
                     <td>110 minutos</td>
@@ -121,7 +121,7 @@
                 <tr>
                     <td>2015</td>
                     <td>
-                        <a href="/paginas__sudeste/filmes_sudeste/ritualDaErvaMate.html"><h3>"Ka’a’i - O Ritual da Erva Mate”</h3></a>
+                        <a href="filmes_sudeste/ritualDaErvaMate.html"><h3>"Ka’a’i - O Ritual da Erva Mate”</h3></a>
                     </td>
                     <td>Documentário</td>
                     <td>19 minutos</td>
